[tool.poetry]
name = "cg-tsp - hardcoded"
version = "0.1.0"
description = ""
authors = ["Nicolas M. <mine.nicolas@gmail.com>"]
readme = "README.md"
packages = [{include = "cg_tsp _ hardcoded"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
